trying to fix input width on safari

--- a/portal.css
+++ b/portal.css
@@ -25,7 +25,7 @@ h4 {
 }
 
 input, textarea {
-    width: 207px;
+    max-width: 207px;
     font-size: 1.2em;
     padding: 3px;
     border: 2px solid darkgray;
